Add e-commerce websites service

--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
                     </div>
                     <div class="col-4">
                         <div class="offer-card center">
+                            <i class="fa-regular fa-file-image"></i>
+                        <h3>E-commerce Websites</h3>
+                        <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. I will design and build an online store for your business on Shopify or WooCommerce.</p>
+                        <div class="center padding-bottom padding-top">
+                            <a class="btn-primary" href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a>   
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="offer-card center">
                             <i class="fas fa-code"></i>
                     <h3>Website Development</h3>
                     <p>Bespoke website development services tailored to your needs, including one-off tasks, design improvements and error fixing. Perfect for when you need support on an ad-hoc basis.</p>
@@ -140,8 +152,6 @@
                     </div>
                     </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col-4">
                         <div class="offer-card center">
                             <i class="fas fa-tools"></i>
@@ -159,16 +169,6 @@
                         <p>Do you need a facilitator for your training event? I can host webinars or in-person workshops on topics ranging from getting your business online to setting up a Shopify store.</p>
                         <div class="center padding-bottom padding-top">
                             <a class="btn-primary" href="https://sybiltec.com/training">Training</a>   
-                        </div>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="offer-card center">
-                            <i class="fa-regular fa-file-image"></i>
-                        <h3>Leaflet Design</h3>
-                        <p>Do you have an upcoming event that you'd like to promote? I can design a leaflet, poster or social media graphic to showcase your event.</p>
-                        <div class="center padding-bottom padding-top">
-                            <a class="btn-primary" href="https://sybiltec.com/leaflet-design">Leaflet Design</a>   
                         </div>
                         </div>
                     </div>
@@ -474,6 +474,7 @@
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
+                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
                         <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-development">Web Development</a></p>
