--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -142,6 +142,7 @@
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
+                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
                         <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-development">Web Development</a></p>
