--- a/sitemap.html
+++ b/sitemap.html
@@ -101,6 +101,7 @@
                 </ul>
                 <h2>Services</h2>
                 <ul>
+                    <li><a href="https://sybiltec.com/e-commerce-websites">E-commerce Websites</a></li>
                     <li><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></li>
                     <li><a href="https://sybiltec.com/training">Training</a></li>
                     <li><a href="https://sybiltec.com/website-design">Web Design</a></li>
@@ -162,12 +163,13 @@
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
-                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
+                        <p><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></p>
+                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/training">Training</a></p>
                         <p><a href="https://sybiltec.com/website-design">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-development">Web Development</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training">Training</a></p>
-                        <p><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></p>
+                        <p><a href="https://sybiltec.com/website-review">Website Review</a></p>
                     </div>
                     <div class="col-3">
                         <div class="ml-form-embed"
