Add page for Shopify webinar

--- a/index.html
+++ b/index.html
@@ -345,6 +345,20 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/building-online-store-using-shopify"><img src="images/shopify-logo-window-with-plant-350x183.jpg" 
+                                alt="Shopify logo in window with plant"></a>     
+                            <div class="blog-card-text">           
+                                <h3>Free Webinar: Building an Online Store Using Shopify</h3>
+                                <p>13 February 2024</p>
+                                <p>Looking to sell products online? Join our free webinar, in association with CNT Associates, to learn how to build an online store with Shopify.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/building-online-store-using-shopify">Register Now</a>   
+                                </div>
+                            </div>
+                        </div> 
+                    </div>
                     <div class="col-4">          
                         <div class="blog-card">
                             <a href="https://sybiltec.com/best-free-wordpress-plugins"><img src="images/wordpress-add-new-plugins-page.jpg" 
@@ -358,20 +372,6 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/digital-marketing-strategy"><img src="images/laptop-computer-on-glass-top-table-350x183.jpg" 
-                                alt="Laptop computer on glass-top table"></a>     
-                            <div class="blog-card-text">           
-                                <h3>Free Webinar: Digital Marketing Strategy</h3>
-                                <p>24 January 2024</p>
-                                <p>Want to learn how to develop an effective digital marketing strategy for your business? Join this free webinar hosted by CNT Associates.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/digital-marketing-strategy">Register Now</a>   
-                                </div>
-                            </div>
-                        </div> 
                     </div>
                     <div class="col-4">  
                         <div class="blog-card">   
