Add blog on Google Search Console

--- a/blog.html
+++ b/blog.html
@@ -87,10 +87,16 @@
         </div>
         <div class="main section">
             <div class="container-1140">
-                <h2>Free Webinar: Building an Online Store Using Shopify</h2>
+                <h2>How to Use Google Search Console: a Quick Guide</h2>
+                <p>Improving your website's SEO begins with understanding the search performace of your site. Read this guide on how to create a property, view your metrics, fix page indexing issues and more. …</p>
+                <br>
+                <a class="btn-primary" href="https://sybiltec.com/google-search-console">Read the Guide</a>
+                <div class="padding-top">
+                    <h2>Free Webinar: Building an Online Store Using Shopify</h2>
                     <p>If you are a business owner looking to sell products or services online, you will need an online store. In this free webinar, delivered in association with CNT Associates, we will cover how to develop a store with one of the most popular e-commerce platforms - Shopify …</p>
                     <br>
                     <a class="btn-primary" href="https://sybiltec.com/building-online-store-using-shopify">Register Now</a>
+                </div>
                 <div class="padding-top">
                     <h2>10 Best Free WordPress Plugins</h2>
                     <p>WordPress is one of the most popular website builder platforms on the internet. One reason why is the vast selection of plugins available, allowing you to build almost anything you can imagine. WordPress provides you with the essential tools you need to create a blog, but unless you are building a very basic site, you will need at least a few plugins to give you those additional functionalities. …</p>
