--- a/index.html
+++ b/index.html
@@ -345,6 +345,21 @@
                     <p>Read my latest blog posts.</p>
                 </div>
                 <div class="row">
+                    <div class="col-4">  
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/google-search-console">
+                                <img src="images/google-search-console-350x183.jpg" 
+                                alt="Tired Young Female Employee Feeling Stressed, Headache, and Burnout from Computer Work"></a>
+                            <div class="blog-card-text">                    
+                                <h3>Using Google Search Console: a Quick Guide</h3>
+                                <p>20 February 2024</p>
+                                <p>Google Search Console is an essential tool for improving your website's SEO. Read the article for a quick guide to getting started.</p>
+                                <div class="padding-bottom padding-top">
+                                    <a class="btn-primary" href="https://sybiltec.com/google-search-console">Read the Guide</a>   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-4">
                         <div class="blog-card">   
                             <a href="https://sybiltec.com/building-online-store-using-shopify"><img src="images/shopify-logo-window-with-plant-350x183.jpg" 
@@ -369,21 +384,6 @@
                                 <p>To extend the functionality of your WordPress site, you'll need to install a few plugins. Read this article to learn about the 10 most useful free plugins. </p>
                                 <div class="padding-bottom padding-top">
                                     <a class="btn-primary" href="https://sybiltec.com/best-free-wordpress-plugins">Best WordPress Plugins</a>   
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-4">  
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/common-website-mistakes">
-                                <img src="images/tired-young-female-employee-feeling-stressed-headache-and-burnout-from-computer-work-350x183.jpg" 
-                                alt="Tired Young Female Employee Feeling Stressed, Headache, and Burnout from Computer Work"></a>
-                            <div class="blog-card-text">                    
-                                <h3>10 Common Website Mistakes to Avoid</h3>
-                                <p>16 January 2024</p>
-                                <p>Website mistakes are easy to make, but can be avoided. Read on to learn how you can prevent the most common pitfalls of building a website.</p>
-                                <div class="padding-bottom padding-top">
-                                    <a class="btn-primary" href="https://sybiltec.com/common-website-mistakes">Read More</a>   
                                 </div>
                             </div>
                         </div>
