--- a/sitemap.html
+++ b/sitemap.html
@@ -101,7 +101,7 @@
                 </ul>
                 <h2>Services</h2>
                 <ul>
-                    <li><a href="https://sybiltec.com/e-commerce-websites">E-commerce Websites</a></li>
+                    <li><a href="https://sybiltec.com/ecommerce-websites">E-commerce Websites</a></li>
                     <li><a href="https://sybiltec.com/leaflet-design">Leaflet Design</a></li>
                     <li><a href="https://sybiltec.com/training">Training</a></li>
                     <li><a href="https://sybiltec.com/website-design">Web Design</a></li>
@@ -123,13 +123,14 @@
                     <li><a href="https://sybiltec.com/building-online-store-using-shopify">Free Webinar: Building an Online Store Using Shopify</a></li>
                     <li><a href="https://sybiltec.com/digital-marketing-strategy">Free Webinar: Developing a Digital Marketing Strategy</a></li>
                     <li><a href="https://sybiltec.com/how-does-a-good-website-showcase-trust">How Does a Good Website Showcase Trust?</a></li>
+                    <li><a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></li>
                     <li><a href="https://sybiltec.com/backup-wordpress-website-using-updraftplus">How to Backup Your WordPress Website with UpdraftPlus</a></li>
                     <li><a href="https://sybiltec.com/how-to-choose-web-designer">How to Choose a Web Designer</a></li>
                     <li><a href="https://sybiltec.com/improve-website-seo">How to Improve the SEO of Your Website</a></li>
                     <li><a href="https://sybiltec.com/install-ga4-shopify-website">How to Install GA4 on Your Shopify Website</a></li>
                     <li><a href="https://sybiltec.com/install-ga4-wix-website">How to Install GA4 on Your Wix Website</a></li>
                     <li><a href="https://sybiltec.com/install-ga4-wordpress-website">How to Install GA4 on Your WordPress Website</a></li>
-                    <li><a href="https://sybiltec.com/upgrade-google-analytics-4">How Do I Upgrade to Google Analytics 4?</a></li>
+                    <li><a href="https://sybiltec.com/google-search-console">How to Use Google Search Console: a Quick Guide</a></li>
                     <li><a href="https://sybiltec.com/6-tips-for-surviving-remote-working">Remote Working: How to Survive with 6 Tips</a></li>
                     <li><a href="https://sybiltec.com/shopify-woocommerce">Shopify vs WooCommerce: What Are the Differences?</a></li>
                     <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website">The Importance of Contact Information on Your Website</a></li>
