--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
                         </p>                       
                     </div>
                 </div>
-                <p class="center">Areas covered:<br>Abbey Wood, Crayford, Erith, Barnehurst, Belvedere, Bexley, Bexleyheath, Blackheath, Bromley, Chislehurst, Deptford, Greenwich, Lewisham, Northumberland Heath, Plumstead, Sidcup, Thamesmead, Welling, Woolwich and surrounding areas.</p>
+                <p class="center">Areas covered:<br>Abbey Wood, Barnehurst, Belvedere, Bexley, Bexleyheath, Blackheath, Bromley, Chislehurst, Crayford, Deptford, Erith, Greenwich, Lewisham, Northumberland Heath, Plumstead, Sidcup, Thamesmead, Welling, Woolwich and surrounding areas.</p>
                 <div class="logo"><img src="https://sybiltec.com/images/logos/sybiltec-logo-transparent.png" alt="Sybiltec logo">
             </div>
             </div>
