Add UK Small Business Directory logo

--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -197,6 +197,9 @@
                                 <i class="fa-brands fa-instagram"></i></a>
 			                <a href="https://www.youtube.com/@sybiltec" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-youtube"></i></a>
+                        </p>
+                        <p>
+                            <a href="https://www.uksmallbusinessdirectory.co.uk/" rel="noopener noreferrer" target="_blank"><img src="https://www.uksmallbusinessdirectory.co.uk/links/uksbd-100.png" alt="Business Directory"></a>
                         </p>                       
                     </div>
                 </div>
