--- a/google-search-console.html
+++ b/google-search-console.html
@@ -112,7 +112,7 @@
 
                 <p>You will see this screen:</p>
 
-                <img class="screenshot" src="images/welcome-to-google-search-console.png">
+                <img class="screenshot" src="images/welcome-to-google-search-console.png" alt="Welcome to Google Search Console">
 
                 <h2>Creating a Property</h2>
 
@@ -120,23 +120,23 @@
 
                 <p>Type your domain in the box (without the http or https), and click <em>Continue</em>. If your domain provider is automatically detected, click <em>Start Verification</em> and follow the instructions to verify your domain.</p>
 
-                <img class="screenshot" src="images/verify-domain-ownership-via-dns-record.png">
+                <img class="screenshot" src="images/verify-domain-ownership-via-dns-record.png" alt="Verify domain ownership">
 
                 <p>You should see a message as shown below. Click <em>Go to Property</em>.</p>
 
-                <img class="screenshot" src="images/ownership-auto-verified.png">
+                <img class="screenshot" src="images/ownership-auto-verified.png" alt="Ownership auto verified">
 
                 <p>If your domain provider is not listed, select <em>Any DNS provider</em>, and follow the instructions to connect the domain manually.</p>
 
-                <img class="screenshot" src="images/verify-domain-ownership-via-dns-record-2.png">
+                <img class="screenshot" src="images/verify-domain-ownership-via-dns-record-2.png" alt="Verify domain ownership via DNS record">
 
                 <p>If domain verification doesn't work, you will need to choose the URL prefix option. Type the full URL of your website in the box (including the https) and click <em>Continue</em>. You will see a screen as shown below. You will be shown a variety of different methods to verify ownership. Choose one of the methods, follow the instructions and click <em>Done</em>.</p>
 
-                <img class="screenshot" src="images/verify-ownership.png">
+                <img class="screenshot" src="images/verify-ownership.png" alt="Verify ownership">
 
                 <p>If the verification was successful, you will see a message like so. Click <em>Go to Property</em>.</p>
 
-                <img class="screenshot" src="images/auto-verified-2.png">
+                <img class="screenshot" src="images/auto-verified-2.png" alt="Auto verified">
 
                 <h2>Submit Your Sitemap</h2>
 
@@ -144,13 +144,13 @@
 
                 <p>Once you have found the URL of your sitemap, in Search Console, click the <em>Sitemaps</em> tab (below <em>Indexing</em>). In the blank space below <em>Add a new sitemap</em>, enter the URL of your sitemap and click <em>Submit</em>. Google will then process the sitemap and notify you if there are any issues.</p>
 
-                <img class="screenshot" src="images/add-new-sitemap.png">
+                <img class="screenshot" src="images/add-new-sitemap.png" alt="Add a new sitemap">
 
                 <h2>Wait a While</h2>
 
                 <p>If you click the <em>Performance</em> tab at this stage, you will see the message <em>Processing data, please check again in a day or so</em>. You'll see data here within a few days, but it can take up to a few weeks before you start to see any meaningful results. So at this point, you can sit back and relax whilst you wait for the data to flow in.</p>
 
-                <img class="screenshot" src="images/google-search-console-processing-data.png">
+                <img class="screenshot" src="images/google-search-console-processing-data.png" alt="Processing data, please check again in a day or so">
 
                 <h2>The Main Tabs in Search Console Explained</h2>
 
@@ -162,7 +162,7 @@
 
                 <p>You can also view the average CTR and average position by clicking on the tabs. These are indicated by the green and orange lines respectively.</p>
 
-                <img class="screenshot" src="images/performance.png">
+                <img class="screenshot" src="images/performance.png" alt="Google Search Console Performance chart">
 
                 <p>You can toggle each of these metrics on and off, but at least one metric must be displayed at any one time. Here are the definitions of each metric:</p>
 
@@ -193,17 +193,17 @@
 
                 <p>The <em>Pages</em> tab (below <em>Indexing</em>) shows the number of indexed and unindexed pages on your site, if any, over the last 3 months.</p>
 
-                <img class="screenshot" src="images/page-indexing.png">
+                <img class="screenshot" src="images/page-indexing.png" alt="Page indexing">
 
                 <p>If there are unindexed pages present, then the reasons why the pages can't be served on Google will be listed below the chart.</p>
 
-                <img class="screenshot" src="images/why-pages-arent-indexed.png">
+                <img class="screenshot" src="images/why-pages-arent-indexed.png" alt="Why pages aren't indexed">
 
                 <p>If you click on any of the reasons, you'll be given more details about the issue and the pages that are affected by that issue. Not all of the issues will need fixing; you will need to examine the issue carefully to determine whether a fix is required or not. </p>
 
                 <p>If you have decided that an issue does need to be fixed, once you have finished fixing, click the <em>Validate Fix</em> button. Within a few days, Google will notify you about whether the fix was successful or not.</p>
 
-                <img class="screenshot" src="images/validate-fix.png">
+                <img class="screenshot" src="images/validate-fix.png" alt="Validate fix">
 
                 <h3>Removals</h3>
 
@@ -211,7 +211,7 @@
 
                 <p>If you find that there are some pages which you want removed from Google, head to the <em>Removals</em> tab (below <em>Indexing</em>). Click <em>New request</em>, enter the URL of the page to be removed and click <em>Next</em>.</p>
                 
-                <img class="screenshot" src="images/new-request.png">
+                <img class="screenshot" src="images/new-request.png" alt="New request for a URL removal">
 
                 <p>You will be asked to confirm the removal. Click <em>Submit Request</em>. The removal is temporary, meaning that it can reappear in search results after 6 months. If you don't want this to happen, hide or delete the page from your website.</p>
 
