Add email address

--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -195,7 +195,7 @@
                     <div class="col-3">
                         <h4>Get in Touch</h4>
                         <p>
-                            <a href="https://sybiltec.com/contact"><i class="far fa-envelope"></i></a>
+                            <a href="mailto:info@sybiltec.com?subject=Website Enquiry"><i class="far fa-envelope"></i></a>
                             <a href="https://www.linkedin.com/in/sybil-m" target="_blank" rel="noopener noreferrer">
                                 <i class="fa-brands fa-linkedin"></i></a>
                             <a href="https://instagram.com/sybiltec/" target="_blank" rel="noopener noreferrer">
