--- a/website-design.html
+++ b/website-design.html
@@ -156,28 +156,11 @@
                             <h3 style="font-size: 18px;">Global consultancy specialising in Information Technologies, Cyber Security, Data/AI management and Agile Working</h3>
                             <ul>
                                 <li>Website design and development</li>
+                                <li>Google Analytics setup</li>
+                                <li>Google Search Console submission</li>
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://emrys.group/" 
-                                target="_blank" rel="noopener noreferrer">View Client</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="encalife" class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/encalife-2.jpg" alt="encalife website">
-                        </div>
-                        <div class="col-7">
-                            <h2>Encalife</h2>
-                            <h3 style="font-size: 18px;">Experience the unusual, every day</h3>
-                            <ul>
-                                <li>Homepage and collection page design in GemPages</li>
-                            </ul>
-                            <div class="padding-btn">
-                                <a class ="btn-secondary" href="https://www.encalife.com/" 
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
                         </div>
@@ -191,7 +174,7 @@
                         </div>
                         <div class="col-7">
                             <h2>LD Tiling Contractors</h2>
-                            <h3 style="font-size: 18px;">Offering a range of tiling services throughout the South East of England</h3>
+                            <h3 style="font-size: 18px;">Offering a range of tiling services throughout South East London</h3>
                             <ul>
                                 <li>Website design and development</li>
                             </ul>
@@ -225,21 +208,6 @@
                     </div>
                 </div>
 
-                <div id="global-banking-school" class="shadow-box-2">
-                    <div class="row-2">
-                        <div class="col-5">
-                            <img src="https://sybiltec.com/images/clients/Global-Banking-School-2.jpg" alt="Global Banking School">
-                        </div>
-                        <div class="col-7">
-                            <h2>Global Banking School</h2>
-                            <h3 style="font-size: 18px;">Flexible study that fits around you</h3>
-                            <ul>
-                                <li>Landing page design in Unbounce</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
                 <div id="happily-clappily-ever-laughter" class="shadow-box-2">
                     <div class="row-2">
                         <div class="col-5">
@@ -255,6 +223,25 @@
                             </ul>
                             <div class="padding-btn">
                                 <a class ="btn-secondary" href="https://happilyclappilyeverlaughter.com"
+                                target="_blank" rel="noopener noreferrer">View Client</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="encalife" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/encalife-2.jpg" alt="encalife website">
+                        </div>
+                        <div class="col-7">
+                            <h2>Encalife</h2>
+                            <h3 style="font-size: 18px;">Experience the unusual, every day</h3>
+                            <ul>
+                                <li>Homepage and collection page design in GemPages</li>
+                            </ul>
+                            <div class="padding-btn">
+                                <a class ="btn-secondary" href="https://www.encalife.com/" 
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
                         </div>
@@ -277,6 +264,21 @@
                                 <a class ="btn-secondary" href="https://stm238.wixsite.com/swipsearch"
                                 target="_blank" rel="noopener noreferrer">View Client</a>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="global-banking-school" class="shadow-box-2">
+                    <div class="row-2">
+                        <div class="col-5">
+                            <img src="https://sybiltec.com/images/clients/Global-Banking-School-2.jpg" alt="Global Banking School">
+                        </div>
+                        <div class="col-7">
+                            <h2>Global Banking School</h2>
+                            <h3 style="font-size: 18px;">Flexible study that fits around you</h3>
+                            <ul>
+                                <li>Landing page design in Unbounce</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
